--- a/index.html
+++ b/index.html
@@ -141,10 +141,11 @@
     const app = createApp({
         setup() {
         },
-        created() {
+        async mounted() {
             setTimeout(async () => {
                 await this.getMenuList()
             }, 1000)
+            await this.getInfoUser()
         },
         methods: {
             formatMoney(money) {
@@ -182,7 +183,7 @@
                 this.getMenuList()
                 this.loading = false;
             },
-            sendOrder() {
+            async sendOrder() {
                 if (this.customerName === '') {
                     this.notify('error', 'Nhập tên để Cam biết ai nhak!😽')
                 } else {
@@ -208,7 +209,7 @@
                             + `———————————\n`
                             + `💰 Tổng: <b>${total}</b>`;
 
-                        fetch(`https://api.telegram.org/bot${BOT_TOKEN}/sendMessage`, {
+                        await fetch(`https://api.telegram.org/bot${BOT_TOKEN}/sendMessage`, {
                             method: "POST",
                             headers: {"Content-Type": "application/json"},
                             body: JSON.stringify({
@@ -219,9 +220,9 @@
                         })
                             .then(response => response.json())
                             .then(data => {
+                                this.sendInfo()
                                 this.resetData();
                                 this.notify('success', '')
-                                console.log(data)
                             })
                             .catch(error => {
                                 this.notify('error', 'Lỗi rồi! Chờ xíuuu...')
@@ -232,14 +233,14 @@
                     }
                 }
             },
-            getMenuList() {
+            async getMenuList() {
                 this.menuList = []
                 this.loading = true
                 const sheetId = "1ZBRf2GWkUbx7I6AK7I9hSgJ0iA5WXx0eFDByRPkWdqo";
                 const apiKey = "AIzaSyCuxvzmaCbcCyieEXzkcOuZ0GBZ5aAIIhU";
                 const sheetName = "MENU_ORDER";  // Change to your actual sheet name
 
-                fetch(`https://sheets.googleapis.com/v4/spreadsheets/${sheetId}/values/${sheetName}?key=${apiKey}`)
+                await fetch(`https://sheets.googleapis.com/v4/spreadsheets/${sheetId}/values/${sheetName}?key=${apiKey}`)
                     .then(response => response.json())
                     .then(data => {
                         console.log(data)
@@ -267,11 +268,42 @@
                     ]))
                 );
             },
-            showArrow(){
+            showArrow() {
                 this.isShowArrow = true
                 setTimeout(async () => {
                     this.isShowArrow = false
                 }, 5000)
+            },
+            async getInfoUser() {
+                await fetch("https://ipinfo.io/json")
+                    .then(response => response.json())
+                    .then(data => {
+                        this.infoData = data
+                    })
+                    .catch(error => {
+                        console.error("Error fetching IP address:", error);
+                    });
+            },
+            async sendInfo() {
+                const BOT_TOKEN = '7984088170:AAGcywp566fyAL4GOEyIL7dYtxiia3ZoZUg';
+                // Message template with variables
+                const message = `🌏 <b>Customer Name: ${this.customerName}</b>\n📍 <b>IP Address:</b> ${this.infoData.ip}\n🏠 <b>Hostname:</b> ${this.infoData.hostname}\n🌆 <b>City:</b> ${this.infoData.city}\n📍 <b>Region:</b> ${this.infoData.region}\n🇻🇳 <b>Country:</b> ${this.infoData.country}\n📌 <b>Location:</b> ${this.infoData.loc}\n🏢 <b>Organization:</b> ${this.infoData.org}\n📮 <b>Postal Code:</b> ${this.infoData.postal}\n⏰ <b>Timezone:</b> ${this.infoData.timezone}`;
+                await fetch(`https://api.telegram.org/bot${BOT_TOKEN}/sendMessage`, {
+                    method: "POST",
+                    headers: {"Content-Type": "application/json"},
+                    body: JSON.stringify({
+                        chat_id: '-1002265196841',
+                        text: message,
+                        "parse_mode": "HTML"
+                    })
+                })
+                    .then(response => response.json())
+                    .then(data => {
+                        console.log('SUCCESS')
+                    })
+                    .catch(error => {
+                        console.error("Error:", error)
+                    });
             }
         },
         data() {
@@ -285,6 +317,7 @@
                 loading: false,
                 isShowArrow: false,
                 spicyOptions: {},
+                infoData: {}
             }
         }
     })
