--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div v-show="!loading && item.is_show" v-for="(item, key) in menuList"
              class="relative flex items-center justify-between bg-gray-100 rounded-xl p-4 mb-4"
              :key="key">
-            <img v-if="item.recommended === true" src="./images/recommended.png" alt="Recommended"
+            <img v-if="item.recommended === true" src="https://iili.io/3FLETOJ.png" alt="Recommended"
                  class="absolute top-[0px] -left-[5px] w-[50px] h-[50px]">
             <div :class="`bg-[url(${item.thumbnail})]`"
                  class="w-16 h-16 bg-cover bg-no-repeat bg-center rounded-full">
