change logo favico

--- a/external/index.html
+++ b/external/index.html
@@ -6,7 +6,7 @@
         CAMCAM ORDER
     </title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="icon" href="./images/camcam-logo.png" sizes="32x32">
+    <link rel="icon" href="https://iili.io/3FLEqiB.png" sizes="32x32">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue-toast-notification@3"></script>
@@ -14,7 +14,7 @@
     <style>
         .arrow {
             position: absolute;
-            bottom: 180px;
+            bottom: 239px;
             left: 50%;
             transform: rotate(0) translate(-50%, -50%);
             cursor: pointer;
