roll-date-day-of-birth

--- a/external/index.html
+++ b/external/index.html
@@ -140,7 +140,7 @@
                         <label for="uname"
                                class="block w-full pb-1 text-sm font-medium text-gray-500 transition-all duration-200 ease-in-out group-focus-within:text-orange-400">Cho
                             Cam xin tên:</label>
-                        <input id="uname" v-model="customerName" type="text" maxlength="10"
+                        <input id="uname" v-model="customerName" type="text"
                                class="peer h-10 w-full rounded-md bg-gray-50 px-4 outline-none drop-shadow-sm transition-all duration-200 ease-in-out focus:bg-white focus:ring-2 focus:ring-orange-400"
                                placeholder="VD: CAM CAM NÈ"/>
                     </div>
@@ -148,7 +148,7 @@
                         <label for="uphone"
                                class="block w-full pb-1 text-sm font-medium text-gray-500 transition-all duration-200 ease-in-out group-focus-within:text-orange-400">
                             Số điện thoại:</label>
-                        <input id="uphone" v-model="customerPhone" type="text"
+                        <input id="uphone" v-model="customerPhone" type="text" maxlength="10"
                                class="peer h-10 w-full rounded-md bg-gray-50 px-4 outline-none drop-shadow-sm transition-all duration-200 ease-in-out focus:bg-white focus:ring-2 focus:ring-orange-400"
                                placeholder="VD: 0123456789"/>
                     </div>
